--- a/.bowerrc
+++ b/.bowerrc
@@ -1,4 +1,7 @@
 {
   "directory": "app/bower_components",
-  "interactive": false
+  "interactive": false,
+  "proxy": "http://proxy1.hpb.local:8080/",
+  "https-proxy": "http://proxy1.hpb.local:8080/",
+  "strict-ssl": false
 }
